WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289189
AX: VoiceOver cannot position the focus ring correctly element is being focused by drawFocusIfNeeded()
https://bugs.webkit.org/show_bug.cgi?id=289189
Summary
AX: VoiceOver cannot position the focus ring correctly element is being focus...
Yong Su
Reported
2025-03-05 13:26:02 PST
Created
attachment 474464
[details]
The VO focus ring stays on the top of the page and does not follow the currently being focused element What's not working: According to MDN (
https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/drawFocusIfNeeded
), the drawFocusIfNeeded API is supported on Safari. However, when using VoiceOver with Safari 18.3, the focus ring of the VoiceOver cannot position correctly on the currently being focused element, see the attached gif, the VoiceOver focus ring just stays on the top of the page. Here is the demo app I am using for testing:
https://jsbin.com/zofuzah/edit?output
Also I tested on iPhone 15 with Safari 18, the VoiceOver cannot focus on the element that is being focused. What's working: Tested on Chrome v133.0.6943.142, the VoiceOver can focus on the element properly. Environment: - Machine: Apple M1 Pro - Mac OS: 15.3.1 (24D70) - Safari Version 18.3 (20620.2.4.11.5)
Attachments
The VO focus ring stays on the top of the page and does not follow the currently being focused element
(1.32 MB, image/gif)
2025-03-05 21:26 PST
,
Yong Su
no flags
Details
Expected behavior, working perfectly on Chrome
(876.19 KB, image/gif)
2025-03-05 21:28 PST
,
Yong Su
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-05 13:26:25 PST
<
rdar://problem/146323788
>
Yong Su
Comment 2
2025-03-05 13:28:39 PST
Created
attachment 474465
[details]
Expected behavior, working perfectly on Chrome
alehm
Comment 3
2025-08-19 15:42:14 PDT
Is there any update on this bug?
alehm
Comment 4
2025-10-27 11:44:28 PDT
Gently bumping this. This issue prevents iOS users who rely on assistive technology from effectively accessing and using the Google Maps.
Tyler Wilcock
Comment 5
2026-04-23 09:08:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63432
EWS
Comment 6
2026-04-25 17:44:36 PDT
Committed
312024@main
(2a76b69c444e): <
https://commits.webkit.org/312024@main
> Reviewed commits have been landed. Closing PR #63432 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug