Source/WebCore/accessibility/AXGeometryManager.cpp
@@ -67,7 +67,7 @@ AXGeometryManager::~AXGeometryManager()
 #endif
 }
 
-std::optional<IntRect> AXGeometryManager::cachedRectForID(AXID axID)
+std::optional<IntRect> AXGeometryManager::cachedRectForID(AXID axID) const
 {
     auto rectIterator = m_cachedRects.find(axID);
     if (rectIterator != m_cachedRects.end())
